# minihive

./: .gitignore  flake.nix  makefile  pyproject.toml  readme.md
0_milestone-sample/: example.py  test_example.py
1_query-parser/: sql2ra.py
2_logical-opt/: raopt.py
3_mr-translation/: ra2mr.py  test_e2e.py
m1_query_parser/: sql2ra.py
m2_logical_opt/: raopt.py  test_raopt.py  test_raopt_extended.py
m3_mr_translation/: ra2mr.py  raopt.py  sql2ra.py  test_e2e.py
m4_mr_opt/: miniHive.py  ra2mr.py
map-reduce/: test.py
radb/: pizza.db
radb_test/: task.ra
src/: miniHive.py  ra2mr.py  sql2ra.py
tests/: test_e2e.py  test_ra2mr.py
